--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,8 @@
     align-items: center;
     justify-content: center;
     border-bottom: 1px solid black;
+    font-weight: 600;
+    letter-spacing: 5px;
    
     
   }
@@ -32,6 +34,7 @@
   .navbar a:link {
     color: rgb(0, 0, 0);
   text-decoration: none;
+  font-weight: regular;
   }
   
   /* visited link */
@@ -42,11 +45,18 @@
   /* mouse over link */
   .navbar a:hover {
     color: rgba(49, 32, 143, 0.747);
+    text-underline: 1px solid black;
   }
   
   /* selected link */
   .navbar a:active {
     color: rgba(49, 32, 143, 0.747);
+  }
+
+  #line{
+width: 30px;
+      height: 0;
+      border: 0.5px solid black;
   }
   
 
@@ -61,6 +71,7 @@
     justify-content: flex-start;
     border-left: 1px solid black;
     border-right: 1px solid black;
+    
 
 }
 
@@ -102,7 +113,10 @@ flex-direction: column;
    
 }
 #flor{
-    width:40%;
+    width: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     
 }
 
@@ -110,3 +124,76 @@ flex-direction: column;
     width:20%;
     
 }
+
+.bloco2{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    align-content: center;
+    flex-direction: row;
+    padding: 20px;
+}
+
+.topics p{
+    font-weight: bold;
+}
+
+#fotoperfil{
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-right: 1px solid black;
+    
+}
+
+#fotoperfil img{
+    width: 100%;
+
+    object-fit: fill;
+
+    
+}
+
+#brincadeiras{
+    width: 20%;
+    border-right: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+    
+}
+#brincadeiras img{
+    width: 60%;
+
+    object-fit: fill;
+}
+
+#enche{
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+#enche img{
+    width: 100%;
+    object-fit: fill;
+    padding: 0 10px 0 10px;
+
+    
+}
+
+
+/* #topicosredes{
+    width: 40%;
+    padding: 50px;
+    letter-spacing: 5px;
+    font-size: 1em;
+    border-right: 1px solid black;
+    
+}
+ */
