--- a/css/infogeral.css
+++ b/css/infogeral.css
@@ -18,16 +18,22 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  cursor: url('../img/black_cursor.png'), auto;
+  
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 200;
   color: black;
 }
 
+html{
+  border: 1px solid black;
+  border-top: 0px;
+}
 body {
   background-image: url('img/fundo.png');
   background-size: 100% 100%;
-  border: 1px solid black;
+ 
+  cursor: url('../img/black_cursor.png'), auto;
+  
 
 }
 
@@ -50,6 +56,7 @@ body {
   display: flex;
   margin: 2%;
   margin-top: 5px;
+  z-index: 30;
 
 }
 
@@ -68,7 +75,7 @@ footer {
   background-size: cover;
   display: flex;
   width: 100%;
-
+  
 
   margin-top: 200px;
 
@@ -79,7 +86,9 @@ footer {
   color: white;
 
   border: 1px solid black;
+  cursor: url('../img/white_cursor.png'), auto;
 }
+
 
 
 
@@ -92,6 +101,7 @@ footer {
   justify-content: space-between;
   flex-direction: column;
   color: white;
+  cursor: url('../img/white_cursor.png'), auto;
 
 }
 
@@ -101,14 +111,17 @@ footer {
   flex-direction: row;
   padding: 20px;
   padding-left: 0;
+  cursor: url('../img/white_cursor.png'), auto;
 }
 
 .caixafooter {
   width: 15vw;
+  cursor: url('../img/white_cursor.png'), auto;
 }
 
 #margem {
   margin-left: 40px;
+  cursor: url('../img/white_cursor.png'), auto;
 }
 
 .fot2 {
@@ -118,6 +131,8 @@ footer {
   font-weight: normal;
   line-height: 23px;
   letter-spacing: 0.015em;
+  cursor: url('../img/white_cursor.png'), auto;
+  
 }
 
 .ohno {
@@ -131,8 +146,196 @@ footer {
   padding-top: 90px;
   padding-bottom: 90px;
   width: 250px;
+  cursor: url('../img/white_cursor.png'), auto;
 }
 
 .fot3 img {
   width: 100%;
+  cursor: url('../img/white_cursor.png'), auto;
 }
+
+a{
+  cursor: url('../img/linnkkflorpng-05.png'), auto;
+}
+
+
+/* telemovel */
+@media screen and (max-width: 600px) {
+  #logo {
+    width: 20%;
+  }
+  #line{
+    width: 1px;
+    margin-top: 20px;
+  }
+  .navbar ul{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    letter-spacing:3px;
+  }
+
+  footer{
+    flex-direction: column;
+  }
+  .fotline{
+    flex-direction: column;
+    padding: 0px;
+  }
+
+  #margem{
+    margin-left: 0px;
+  }
+
+  .fot1{
+    padding: 0px;
+    padding-top: 50px;
+  }
+
+  .caixafooter{
+    width: 100%;
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+  }
+
+  .caixafooter p{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    font-size: 1.3em;
+  }
+  .caixafooter h3{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    font-size: 1.7em;
+  }
+
+  .fot2{
+    padding: 0px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    padding: 100px 10px 100px 10px;
+  }
+
+  .fot2 p{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  font-size: 1.3em;
+  padding-top: 10px;
+  }
+  .fot2 h2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    font-size: 2em;
+    }
+
+    .fot3{
+      padding: 0px;
+      width: 100px;
+    }
+}
+
+/* tablets: */
+@media screen and (min-width: 600px) and (max-width: 768px) {
+  #logo {
+    width: 15%;
+  }
+
+  #line{
+    width: 20px;
+  }
+  footer{
+    flex-direction: column;
+  }
+  .fotline{
+    flex-direction: column;
+    padding: 0px;
+  }
+
+  #margem{
+    margin-left: 0px;
+  }
+
+  .fot1{
+    padding: 0px;
+    padding-top: 50px;
+  }
+
+  .caixafooter{
+    width: 100%;
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+  }
+
+  .caixafooter p{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    font-size: 1.3em;
+  }
+  .caixafooter h3{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    font-size: 1.7em;
+  }
+
+  .fot2{
+    padding: 0px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    padding: 100px 10px 100px 10px;
+  }
+
+  .fot2 p{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  font-size: 1.3em;
+  padding-top: 10px;
+  }
+  .fot2 h2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    font-size: 2em;
+    }
+
+    .fot3{
+      padding: 0px;
+      width: 100px;
+    }
+}
+
+/* desktop computer */
+@media screen and (min-width: 768px) {
+ 
+}
+
